--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -23,27 +23,43 @@
   </head>
   <body>
     <header>
-      <a href="">Brand</a>
+      <a href=""><img src="logo.png" alt="" /></a>
 
       <nav class="navbar">
         <li class="navbar__item">
-          <a href="/docs"> Docs </a>
+          <a href="/docs">Home</a>
         </li>
         <li class="navbar__item">
-          <a href=""> Price </a>
+          <a href="">Docs</a>
         </li>
         <li class="navbar__item">
-          <a href=""> Idk </a>
+          <a href="">Api</a>
         </li>
         <li class="navbar__item">
-          <a href=""> David </a>
+          <a href="">About</a>
         </li>
       </nav>
 
       <div>
-        <a href="" class="try-free"> try for free </a>
+        <a href="" class="try-free">Learn for free</a>
       </div>
+      <i class="fa fa-bars" id="bars"></i>
     </header>
+
+    <div class="navigation" id="navigation">
+      <li class="navigation__item">
+        <a href="/docs">Home</a>
+      </li>
+      <li class="navigation__item">
+        <a href="">Docs</a>
+      </li>
+      <li class="navigation__item">
+        <a href="">Api</a>
+      </li>
+      <li class="navigation__item">
+        <a href="">About</a>
+      </li>
+    </div>
 
     <%- body %>
 
