--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -27,16 +27,16 @@
 
       <nav class="navbar">
         <li class="navbar__item">
-          <a href="/docs">Home</a>
+          <a href="/">Home</a>
         </li>
         <li class="navbar__item">
-          <a href="">Docs</a>
+          <a href="/docs">Docs</a>
         </li>
         <li class="navbar__item">
-          <a href="">Api</a>
+          <a href="/api">Api</a>
         </li>
         <li class="navbar__item">
-          <a href="">About</a>
+          <a href="/about">About</a>
         </li>
       </nav>
 
@@ -48,27 +48,20 @@
 
     <div class="navigation" id="navigation">
       <li class="navigation__item">
-        <a href="/docs">Home</a>
+        <a href="/">Home</a>
       </li>
       <li class="navigation__item">
-        <a href="">Docs</a>
+        <a href="/docs">Docs</a>
       </li>
       <li class="navigation__item">
-        <a href="">Api</a>
+        <a href="/api">Api</a>
       </li>
       <li class="navigation__item">
-        <a href="">About</a>
+        <a href="/about">About</a>
       </li>
     </div>
 
     <%- body %>
-
-    <footer>
-      <p>&copy; Fun facts api</p>
-      <a href="">
-        <i class="fab fa-github"></i>
-      </a>
-    </footer>
 
     <script src="/js/main.js"></script>
   </body>
