--- a/public/styles.css
+++ b/public/styles.css
@@ -39,6 +39,9 @@ body::-webkit-scrollbar-thumb {
   border-radius: 20px; /* roundness of the scroll thumb */
 }
 
+button {
+  cursor: pointer;
+}
 /* login and register page */
 .signin-signup {
   display: flex;
@@ -50,7 +53,17 @@ body::-webkit-scrollbar-thumb {
   position: absolute;
   right: 20%;
   width: 25%;
+  text-align: center;
   transition: right ease 1s;
+}
+
+.login h1 {
+  font-size: 2rem;
+}
+
+.forgot-password {
+  display: block;
+  margin: 18px 0;
 }
 
 .register {
@@ -59,7 +72,7 @@ body::-webkit-scrollbar-thumb {
 
 input {
   display: block;
-  padding: 10px 6px;
+  padding: 14px;
   width: 100%;
   background-color: #f0f0f0;
   border: none;
@@ -70,18 +83,21 @@ input {
   background-color: #5f4ca5;
   color: white;
   border: none;
-  padding: 6px;
+  padding: 14px;
+  border-radius: 50px;
   width: 100%;
 }
 
 .side {
   position: absolute;
   left: 0;
-  background-color: #5f4ca5;
+  background: linear-gradient(35deg, #352b52 0%, #5f4ca5 35%, #8664ff 100%);
+
   width: 35%;
   height: 100%;
   display: flex;
   align-items: center;
+  justify-content: center;
   transition: left ease 1s;
 }
 
@@ -94,6 +110,30 @@ input {
 }
 
 .side__content {
+  text-align: center;
+}
+
+.side__content p {
+  width: 60%;
+  margin: auto;
+  font-weight: lighter;
+}
+
+.side__content p,
+h3 {
+  color: white;
+}
+
+.side__content h3 {
+  font-size: 2.5rem;
+}
+
+.side__content button {
+  margin: 20px 0;
+  padding: 10px;
+  width: 50%;
+  border: 1px solid white;
+  border-radius: 50px;
 }
 
 header {
