--- a/views/docs.ejs
+++ b/views/docs.ejs
@@ -3,9 +3,6 @@
     <h1>Get all facts</h1>
 
     <p>If you want to get all the facts you can.</p>
-    <div>
-      <code>https://<%= url %>/api/all</code>
-    </div>
 
     <div class="parameters">
       <table>
@@ -37,9 +34,12 @@
       </table>
     </div>
 
-    <div>
+    <div class="api-example">
       <h4>Api call example</h4>
-      <code>https://<%= url %>/api/all</code>
+      <code
+        >https://<%= url %>/api/all?category=boat&apiToken=
+        <a href="/user"> {your_api_key} </a>
+      </code>
     </div>
   </section>
 
@@ -49,9 +49,6 @@
     <h1>Get specific facts</h1>
 
     <p>If you want to get a specific fact.</p>
-    <div>
-      <code>https://<%= url %>/api/all</code>
-    </div>
 
     <!-- <div class="parameters"> -->
     <table>
@@ -71,7 +68,7 @@
       </tbody>
     </table>
     <!-- </div> -->
-    <div>
+    <div class="api-example">
       <h4>Api call example</h4>
       <code>https://<%= url %>/api/all</code>
     </div>
