--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,6 +5,6 @@
     <a class="btn" href="#">Get started</a>
   </div>
   <div>
-    <img src="test.svg" alt="test" style="max-width: 40vw; min-width: 10vw" />
+    <img src="hero.png" alt="test" style="max-width: 35vw; min-width: 10vw" />
   </div>
 </section>
