--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -18,7 +18,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/styles.css" />
     <title>Home</title>
   </head>
   <body>
