--- a/views/user.ejs
+++ b/views/user.ejs
@@ -1,4 +1,6 @@
 <section class="profile">
+  <%- include ("./partials/sidebar", {active: "account"}); %>
+
   <section>
     <h4>Profile</h4>
     <form action="user/" method="POST">
@@ -18,50 +20,9 @@
       />
       <button class="btn">Update</button>
     </form>
-  </section>
-
-  <hr />
-
-  <section>
-    <h4>Change password</h4>
-    <form action="user/change-password" method="POST">
-      <input
-        type="password"
-        name="old"
-        placeholder="Old Password"
-        autocomplete="off"
-      />
-      <input
-        type="password"
-        name="password"
-        placeholder="New Password"
-        autocomplete="off"
-      />
-      <input
-        type="password"
-        name="confirmation"
-        placeholder="new Password confirmation"
-        autocomplete="off"
-      />
-      <%- include ("./partials/messages"); %>
-      <button class="btn">Update</button>
-    </form>
-  </section>
-
-  <hr />
-
-  <section>
-    <h4>Api key</h4>
-    <code>your api key: <%= user.id %></code>
-  </section>
-
-  <hr />
-
-  <section>
-    <h4>Others</h4>
-    <p>today's used quota: <%= user.dailyRequest %></p>
+    <hr />
     <a href="/logout">Logout</a>
+    <hr />
+    <a href="" class="alert">Delete Account</a>
   </section>
 </section>
-
-<script></script>
